Datagrid: fix missalignment provided by minWidth

--- a/src/alto-ui/Datagrid/components/DatagridCell/DatagridCell.scss
+++ b/src/alto-ui/Datagrid/components/DatagridCell/DatagridCell.scss
@@ -37,9 +37,7 @@
   &--error {
     text-align: center;
   }
-  &--editable {
-    min-width: 4.625rem;
-  }
+
   &--error {
     color: $red;
     font-size: $font-size-large;
