--- a/src/alto-ui/Datagrid/components/DatagridHeaderRow/DatagridHeaderRow.scss
+++ b/src/alto-ui/Datagrid/components/DatagridHeaderRow/DatagridHeaderRow.scss
@@ -14,6 +14,7 @@
 .DatagridHeaderRow__group-title {
   flex-shrink: 0;
   height: 1.5rem;
+  min-width: 2rem;
   line-height: 1.5rem;
   overflow: hidden;
   border-bottom: 1px solid $coolgrey-20;
